--- a/templates/cms/update_cms.html.twig
+++ b/templates/cms/update_cms.html.twig
@@ -132,7 +132,7 @@
                     <a href="#">Suivez-moi</a>
                   </div>
                   <div class="col-xs-4 text-center">
-                    <a href="#">Ventes</a>
+                    <a href="#"></a>
                   </div>
                   <div class="col-xs-4 text-center">
                     <a href="#">Amis (es)</a>
@@ -202,16 +202,16 @@
         <li class="treeview">
           <a href="#">
             <i class="fa fa-files-o"></i>
-            <span>Layout Options</span>
+            <span>Update Profil</span>
             <span class="pull-right-container">
               <span class="label label-primary pull-right">4</span>
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="{{ path('topNav') }}"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-            <li><a href="{{ path('boxed') }}"><i class="fa fa-circle-o"></i> En boîte</a></li>
-            <li><a href="{{ path('fixed') }}"><i class="fa fa-circle-o"></i> Fixé</a></li>
-            <li><a href="{{ path('collapsedSidebar') }}"><i class="fa fa-circle-o"></i>  Barre latérale réduite</a></li>
+              <li><a href = "{{ path('profil') }}"><i class="fa fa-circle-o"></i> Profil</a></li>
+              <li><a href="#"><i class="fa fa-circle-o"></i> Formation</a></li>
+              <li><a href="#"><i class="fa fa-circle-o"></i> Contact</a></li>
+              <li><a href="#"><i class="fa fa-circle-o"></i>  Loisir</a></li>
           </ul>
         </li>
         
