--- a/templates/profil/update_profil.html.twig
+++ b/templates/profil/update_profil.html.twig
@@ -1,7 +1,9 @@
 {% extends 'base.html.twig' %}
-{% block body %}
 
-<!-- Site wrapper -->
+
+
+{% block body %}
+<body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
 
   <header class="main-header">
@@ -16,7 +18,10 @@
     <nav class="navbar navbar-static-top">
       <!-- Sidebar toggle button-->
       <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
-        <span class="sr-only">Basculer la navigation</span>
+        <span class="sr-only">>Basculer la navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
       </a>
 
       <div class="navbar-custom-menu">
@@ -38,7 +43,7 @@
                         <img src="{{ asset('dist/img/moi.jpg') }}" class="img-circle" alt="User Image">
                       </div>
                       <h4>
-                        Équipe de soutien
+                        Support Team
                         <small><i class="fa fa-clock-o"></i> 5 mins</small>
                       </h4>
                       <p>Pourquoi ne pas acheter un nouveau thème génial?</p>
@@ -89,7 +94,8 @@
                         <small class="pull-right">20%</small>
                       </h3>
                       <div class="progress xs">
-                        <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar"
+                             aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                           <span class="sr-only">20% Achevée</span>
                         </div>
                       </div>
@@ -116,7 +122,7 @@
 
                 <p>
                   {% for user in users %} {{ user.firstname }} {{ user.lastname }}{% endfor%} - Développeur web
-                  <small>Member depuis Mai. 2018</small>
+                  mall>Member depuis Mai. 2018</small>
                 </p>
               </li>
               <!-- Menu Body -->
@@ -125,13 +131,12 @@
                   <div class="col-xs-4 text-center">
                     <a href="#">Suivez-moi</a>
                   </div>
-                  <div class="col-xs-4 text-center">
-                    <a href="#">Ventes</a>
-                  </div>
+  
                   <div class="col-xs-4 text-center">
                     <a href="#">Amis (es)</a>
                   </div>
                 </div>
+                <!-- /.row -->
               </li>
               <!-- Menu Footer-->
               <li class="user-footer">
@@ -139,7 +144,7 @@
                   <a href="#" class="btn btn-default btn-flat">Profil</a>
                 </div>
                 <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Se connecter</a>
+                  <a href="{{ path('security_logout') }}" class="btn btn-default btn-flat">Se connecter</a>
                 </div>
               </li>
             </ul>
@@ -152,10 +157,7 @@
       </div>
     </nav>
   </header>
-
-  <!-- =============================================== -->
-
-  <!-- Left side column. contains the sidebar -->
+  <!-- Left side column. contains the logo and sidebar -->
   <aside class="main-sidebar">
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
@@ -166,14 +168,14 @@
         </div>
         <div class="pull-left info">
           <p>{% for user in users %} {{ user.firstname }} {{ user.lastname }}{% endfor%}</p>
-          <a href="#"><i class="fa fa-circle text-success"></i> On ligne</a>
+          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
       </div>
       <!-- search form -->
       <form action="#" method="get" class="sidebar-form">
         <div class="input-group">
           <input type="text" name="q" class="form-control" placeholder="Search...">
-              <span class="input-group-btn">
+          <span class="input-group-btn">
                 <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
                 </button>
               </span>
@@ -192,29 +194,29 @@
           </a>
           <ul class="treeview-menu">
               <li class="active"><a href="{{ path('admin') }}"><i class="fa fa-circle-o"></i> Tableau de bord v1</a></li>
-             
+                 
           </ul>
         </li>
-        <li class="treeview active">
+        <li class="treeview">
           <a href="#">
             <i class="fa fa-files-o"></i>
-            <span>Layout Options</span>
+            <span>Update Profil</span>
             <span class="pull-right-container">
               <span class="label label-primary pull-right">4</span>
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="{{ path('topNav') }}"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-            <li class="active"><a href="{{ path('boxed') }}"><i class="fa fa-circle-o"></i> Boxed</a></li>
-            <li><a href="{{ path('fixed') }}"><i class="fa fa-circle-o"></i> Fixed</a></li>
-            <li><a href="{{ path('collapsedSidebar') }}"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
+              <li><a href = "{{ path('profil') }}"><i class="fa fa-circle-o"></i> Profil</a></li>
+              <li><a href="#"><i class="fa fa-circle-o"></i>Formation</a></li>
+              <li><a href="#"><i class="fa fa-circle-o"></i>Contact</a></li>
+              <li><a href="#"><i class="fa fa-circle-o"></i>Loisir</a></li>
           </ul>
         </li>
-      
-        <li class="treeview">
+        
+        <li class="treeview active">
           <a href="#">
             <i class="fa fa-pie-chart"></i>
-            <span>Expérience web</span>
+            <span>Expériences Web</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
@@ -226,68 +228,82 @@
               <li><a href = "{{ path('cms') }}"><i class="fa fa-circle-o"></i> Système de gestion de contenu</a></li>
           </ul>
         </li>
+        <li>
+          <a href="{{ path('calendar') }}">
+            <i class="fa fa-calendar"></i> <span>Calendrier</span>
+            <span class="pull-right-container">
+              <small class="label pull-right bg-red">3</small>
+              <small class="label pull-right bg-blue">17</small>
+            </span>
+          </a>
+        </li>
       </ul>
     </section>
     <!-- /.sidebar -->
   </aside>
-
-  <!-- =============================================== -->
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Mise en boîte
-        <small>Exemple vide pour la mise en page encadrée</small>
+        Update Profil
+        <small>Preview sample</small>
       </h1>
       <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a href="#">Layout</a></li>
-        <li class="active">Boxed</li>
+        <li><a href="{{ path('home') }}"><i class="fa fa-dashboard"></i> Home</a></li>
+        <li class="active">PROFIL</li>
       </ol>
     </section>
 
     <!-- Main content -->
-    <section class="content">
-      <div class="callout callout-info">
-        <h4>Pointe!</h4>
+    <section class="content d-flex justify-content-cente">
+      <div class="row">
+        <div class="col-md-7">
+          <!--  -->
+          
+          
+            <div class="box box-primary">
+              <div class="box-header with-border">
+                <h3 class="box-title"></h3>
 
-        <p>Ajoutez la classe layout-boxed à la balise body pour obtenir cette présentation. La mise en boîte est utile lorsque vous travaillez sur
-          grands écrans car il empêche le site de s’étirer très large.</p>
+                <div class="box-tools pull-right">
+                  <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                  </button>
+                  <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                  
+                 
+                </div>
+              </div>
+              
+              <div class="box-body">
+                <div class="chart">
+                  <canvas id="areaChart" style="height:250px"></canvas>
+                </div>
+                {{ form_start (profilForm) }}
+                    
+                {{ form_end(profilForm) }}
+              
+              </div>
+              
+              <!-- /.box-body -->
+            </div>
+          <!-- /.box -->
+      
+        </div>
+       
       </div>
-      <!-- Default box -->
-      <div class="box">
-        <div class="box-header with-border">
-          <h3 class="box-title">Titre</h3>
+      <!-- /.row -->
 
-          <div class="box-tools pull-right">
-            <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-              <i class="fa fa-minus"></i></button>
-            <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-              <i class="fa fa-times"></i></button>
-          </div>
-        </div>
-        <div class="box-body">
-          Commencez à créer votre application étonnante!
-        </div>
-        <!-- /.box-body -->
-        <div class="box-footer">
-          Footer
-        </div>
-        <!-- /.box-footer-->
-      </div>
-      <!-- /.box -->
     </section>
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
-
   <footer class="main-footer">
     <div class="pull-right hidden-xs">
       <b>Version</b> 2.4.0
     </div>
-    <strong>Copyright &copy; 2018-2019 <a href="https://adminlte.io">Mon Site</a>.</strong> Tous les droits
+    <strong>Copyright &copy; 2018-2019 <a href="https://myessad.ma6tvacoder.org/">Mon Site</a>.</strong> Tous les droits
     réservé.
   </footer>
 
@@ -309,7 +325,7 @@
               <i class="menu-icon fa fa-birthday-cake bg-red"></i>
 
               <div class="menu-info">
-                <h4 class="control-sidebar-subheading">Anniversaire de Mohamed</h4>
+                <h4 class="control-sidebar-subheading">Anniversaire de YESSAD</h4>
 
                 <p>Sera le 27 Décembre</p>
               </div>
@@ -320,7 +336,7 @@
               <i class="menu-icon fa fa-user bg-yellow"></i>
 
               <div class="menu-info">
-                <h4 class="control-sidebar-subheading">Farid a mis à jour son profil</h4>
+                <h4 class="control-sidebar-subheading">Frodo a mis à jour son profil</h4>
 
                 <p>Nouveau téléphone 06 67 80 55 98</p>
               </div>
@@ -331,9 +347,9 @@
               <i class="menu-icon fa fa-envelope-o bg-light-blue"></i>
 
               <div class="menu-info">
-                <h4 class="control-sidebar-subheading">Nadia a rejoint la liste de diffusion</h4>
+                <h4 class="control-sidebar-subheading"> Liste de diffusion jointe à Nora</h4>
 
-                <p>nadia@example.com</p>
+                <p>nora@example.com</p>
               </div>
             </a>
           </li>
@@ -342,7 +358,7 @@
               <i class="menu-icon fa fa-file-code-o bg-green"></i>
 
               <div class="menu-info">
-                <h4 class="control-sidebar-subheading">Cron Job 254 exécuté</h4>
+                <h4 class="control-sidebar-subheading">Cron Job 254 exécutés</h4>
 
                 <p>Temps d'exécution 5 secondes</p>
               </div>
@@ -416,36 +432,36 @@
 
           <div class="form-group">
             <label class="control-sidebar-subheading">
-                Rapport d'utilisation du panneau
+              Rapport d'utilisation du panneau
               <input type="checkbox" class="pull-right" checked>
             </label>
 
             <p>
-                Quelques informations sur cette option de paramètres généraux
+              Quelques informations sur cette option de paramètres généraux
             </p>
           </div>
           <!-- /.form-group -->
 
           <div class="form-group">
             <label class="control-sidebar-subheading">
-                Autoriser la redirection de courrier
+              Autoriser la redirection de courrier
               <input type="checkbox" class="pull-right" checked>
             </label>
 
             <p>
-                D'autres ensembles d'options sont disponibles
+              D'autres ensembles d'options sont disponibles
             </p>
           </div>
           <!-- /.form-group -->
 
           <div class="form-group">
             <label class="control-sidebar-subheading">
-                Exposer le nom de l'auteur dans les posts
+              Exposer le nom de l'auteur dans les posts
               <input type="checkbox" class="pull-right" checked>
             </label>
 
             <p>
-                Autoriser l'utilisateur à afficher son nom dans les messages de blog
+              Autoriser l'utilisateur à afficher son nom dans des articles de blog
             </p>
           </div>
           <!-- /.form-group -->
@@ -454,7 +470,7 @@
 
           <div class="form-group">
             <label class="control-sidebar-subheading">
-                Montre moi comme en ligne
+              Montre moi comme en ligne
               <input type="checkbox" class="pull-right" checked>
             </label>
           </div>
@@ -462,7 +478,7 @@
 
           <div class="form-group">
             <label class="control-sidebar-subheading">
-                Désactiver les notifications
+              Désactiver les notifications
               <input type="checkbox" class="pull-right">
             </label>
           </div>
@@ -470,7 +486,7 @@
 
           <div class="form-group">
             <label class="control-sidebar-subheading">
-                Supprimer l'historique du chat
+              Supprimer l'historique du chat
               <a href="javascript:void(0)" class="text-red pull-right"><i class="fa fa-trash-o"></i></a>
             </label>
           </div>
@@ -487,4 +503,5 @@
 </div>
 <!-- ./wrapper -->
 
+</body>
 {% endblock %}
