--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -38,24 +38,60 @@
 
     {{ form_start(form) }}
       <div class="form-group has-feedback">
-        <!-- <input type="text" class="form-control" name ="firstname" placeholder="Nom.."> -->
-       {{ form_row(form.username, {'label':'Nom utilisateur','attr':{'placeholder':'Nom utilisateur...'}})}}
+      
+        {{ form_row(form.username, {'label':'Pseudo *','attr':{'placeholder':'Nom utilisateur...'}})}}
         <span class="glyphicon glyphicon-user form-control-feedback"></span>
       </div>
-     
+      
       <div class="form-group has-feedback">
-        <!-- <input type="email" class="form-control" name ="email" placeholder="Email..."> -->
-        {{ form_row(form.email, {'label':'Email','attr':{'placeholder':'Email...'}})}}
+      
+        {{ form_row(form.firstname, {'label':'Nom utilisateur','attr':{'placeholder':'Nom utilisateur...'}})}}
+        <span class="glyphicon glyphicon-user form-control-feedback"></span>
+      </div>
+
+      <div class="form-group has-feedback">
+      
+        {{ form_row(form.lastname, {'label':'Nom utilisateur','attr':{'placeholder':'Nom utilisateur...'}})}}
+        <span class="glyphicon glyphicon-user form-control-feedback"></span>
+      </div>
+
+      <div class="form-group has-feedback">
+
+        {{ form_row(form.phone, {'label':'phone','attr':{'placeholder':'tel...'}})}}
+        <span class="glyphicon glyphicon-phone form-control-feedback"></span>
+      </div>
+
+      <div class="form-group has-feedback">
+
+        {{ form_row(form.address, {'label':'address','attr':{'placeholder':'Votre addresse...'}})}}
+        <span class="glyphicon  glyphicon-map-marker form-control-feedback"></span>
+      </div>
+    
+      <div class="form-group has-feedback">
+
+        {{ form_row(form.ville, {'label':'ville','attr':{'placeholder':'Votre ville...'}})}}
+        <span class="glyphicon form-control-feedback"></span>
+      </div>
+
+      <div class="form-group has-feedback">
+
+        {{ form_row(form.codePostal, {'label':'codePostal','attr':{'placeholder':'Votre Code postal...'}})}}
+        <span class="glyphicon glyphicon-city form-control-feedback"></span>
+      </div>
+
+      <div class="form-group has-feedback">
+
+        {{ form_row(form.email, {'label':'Email *','attr':{'placeholder':'Email...'}})}}
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
         <!-- <input type="password" class="form-control" name ="password" placeholder="Mot de passe"> -->
-        {{ form_row(form.password, {'label':'Mot de passe','attr':{'placeholder':'Mot de passe...'}})}}
+        {{ form_row(form.password, {'label':'Mot de passe *','attr':{'placeholder':'Mot de passe...'}})}}
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
         <!-- <input type="confirm_password" class="form-control" placeholder="Retapez votre mot de passe"> -->
-        {{ form_row(form.confirm_password, {'label':'Confirmer votre mot de passe','attr':{'placeholder':'Retaper votre mot de passe...'}})}}
+        {{ form_row(form.confirm_password, {'label':'Confirmer votre mot de passe *','attr':{'placeholder':'Retaper votre mot de passe...'}})}}
         <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
       </div>
       <div class="row">
