--- a/templates/admin/back.html.twig
+++ b/templates/admin/back.html.twig
@@ -200,16 +200,16 @@
         <li class="treeview">
           <a href="#">
             <i class="fa fa-files-o"></i>
-            <span>Layout Options</span>
+            <span>Update Profil</span>
             <span class="pull-right-container">
               <span class="label label-primary pull-right">4</span>
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="{{ path('topNav') }}"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-            <li><a href="{{ path('boxed') }}"><i class="fa fa-circle-o"></i> En boîte</a></li>
-            <li><a href="{{ path('fixed') }}"><i class="fa fa-circle-o"></i> Fixé</a></li>
-            <li><a href="{{ path('collapsedSidebar') }}"><i class="fa fa-circle-o"></i>  Barre latérale réduite</a></li>
+              <li><a href = "{{ path('profil') }}"><i class="fa fa-circle-o"></i> Profil</a></li>
+              <li><a href="#"><i class="fa fa-circle-o"></i> Formation</a></li>
+              <li><a href="#"><i class="fa fa-circle-o"></i> Contact</a></li>
+              <li><a href="#"><i class="fa fa-circle-o"></i>  Loisir</a></li>
           </ul>
         </li>
         
@@ -409,7 +409,7 @@
           <li>
             <a href="javascript:void(0)">
               <h4 class="control-sidebar-subheading">
-                Back && Framework
+                Back &&  <li><a href = "{{ path('profil') }}"><i class="fa fa-circle-o"></i> Profil</a></li>
                 <span class="label label-primary pull-right">68%</span>
               </h4>
 
