--- a/templates/admin/calendar.html.twig
+++ b/templates/admin/calendar.html.twig
@@ -342,7 +342,7 @@
         <li class="treeview">
           <a href="#">
             <i class="fa fa-files-o"></i>
-            <span>Layout Options</span>
+            <span>Update Profil</span>
             <span class="pull-right-container">
               <span class="label label-primary pull-right">4</span>
             </span>
@@ -367,6 +367,7 @@
               <li><a href = "{{ path('front') }}"><i class="fa fa-circle-o"></i>Front</a></li>
               <li><a href = "{{ path('back') }}"><i class="fa fa-circle-o"></i> Back</a></li>
               <li><a href = "{{ path('framework') }}"><i class="fa fa-circle-o"></i> Framework</a></li>
+              <li><a href = "{{ path('profil') }}"><i class="fa fa-circle-o"></i> Profil</a></li>
               <li><a href = "{{ path('cms') }}"><i class="fa fa-circle-o"></i> Système de gestion de contenu</a></li>
           </ul>
         </li>
