--- a/templates/admin/profil.html.twig
+++ b/templates/admin/profil.html.twig
@@ -131,7 +131,7 @@
                   <div class="col-xs-4 text-center">
                     <a href="#">Suivez-moi</a>
                   </div>
-                
+              
                   <div class="col-xs-4 text-center">
                     <a href="#">Amis (es)</a>
                   </div>
@@ -200,16 +200,16 @@
         <li class="treeview">
           <a href="#">
             <i class="fa fa-files-o"></i>
-            <span>Layout Options</span>
+            <span>Update Profil</span>
             <span class="pull-right-container">
               <span class="label label-primary pull-right">4</span>
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="{{ path('topNav') }}"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-            <li><a href="{{ path('boxed') }}"><i class="fa fa-circle-o"></i> En boîte</a></li>
-            <li><a href="{{ path('fixed') }}"><i class="fa fa-circle-o"></i> Fixé</a></li>
-            <li><a href="{{ path('collapsedSidebar') }}"><i class="fa fa-circle-o"></i>  Barre latérale réduite</a></li>
+              <li><a href = "{{ path('profil') }}"><i class="fa fa-circle-o"></i> Profil</a></li>
+              <li><a href="#"><i class="fa fa-circle-o"></i> Formation</a></li>
+              <li><a href="#"><i class="fa fa-circle-o"></i> Contact</a></li>
+              <li><a href="#"><i class="fa fa-circle-o"></i>  Loisir</a></li>
           </ul>
         </li>
         
@@ -247,21 +247,21 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Système de gestion de contenu
+        PROFIL
         <small>Preview sample</small>
       </h1>
       <ol class="breadcrumb">
         <li><a href="{{ path('home') }}"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="active">FRAMEWORK</li>
+        <li class="active">PROFIL</li>
       </ol>
     </section>
 
     <!-- Main content -->
     <section class="content d-flex justify-content-cente">
       <div class="row">
-        <div class="col-md-7">
+        <div class="col-md-12 ">
           <!--  -->
-          
+          {% for profil in profils %}
           
             <div class="box box-primary">
               <div class="box-header with-border">
@@ -271,25 +271,24 @@
                   <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
                   </button>
                   <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
-                  
+                  <a href="{{ path('update_profil',{'id' : profil.id}) }}" ><i class="fa fa-edit"></i></a>
                  
                 </div>
               </div>
-              
+   
               <div class="box-body">
+                  <h3 class="text-center">{{ profil.presentation | raw }}</h3>
                 <div class="chart">
                   <canvas id="areaChart" style="height:250px"></canvas>
+                  
                 </div>
-                {{ form_start (frameworkForm) }}
-                    
-                {{ form_end(frameworkForm) }}
-              
+                
               </div>
               
               <!-- /.box-body -->
             </div>
           <!-- /.box -->
-      
+          {% endfor %}
         </div>
        
       </div>
@@ -408,7 +407,7 @@
           <li>
             <a href="javascript:void(0)">
               <h4 class="control-sidebar-subheading">
-                Back && Framework
+                Back && Front
                 <span class="label label-primary pull-right">68%</span>
               </h4>
 
